# URSlicer

./: .gitmodules  CONTRIBUTING.md  README.md  johnislazy.md  next_steps.md
printing_manager/: CMakeLists.txt  README.md  package.xml
printing_manager/include/printer_manager/: printer_manager_component.hpp
printing_manager/launch/: int_sim_test.launch.py  moveit.launch.py  real_slice_test.launch.py  sim_testing.launch.py  test.launch.py  test_sim_testing.launch.py
printing_manager/rviz/: test_day.rviz  test_slicer.rviz  ur_slicer.rviz
printing_manager/src/: printer_manager_component.cpp  printing_manager_node.cpp  standalone_printer_manager_node.cpp
slicer_library/: temp.py
slicer_node/: README.md  package.xml  setup.cfg  setup.py
slicer_node/slicer_node/: slicer_node.py
slicer_node/slicing_scripts/: calculate_intersections (1).py  slicing_algo_integrate_v4.py  slicing_configs_v4.py  ur_slicer.py
slicer_panel/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
slicer_panel/include/slicer_panel/: panel.hpp
slicer_panel/launch/: ur5_mock_panel_demo.launch.py
slicer_panel/src/: panel.cpp
test_nodes/: README.md  package.xml  setup.py
test_nodes/test_nodes/: bed_test.py  manager_test.py  mock_slicer.py
test_stls/: Cube_Complex.stl  Cube_Simple.stl  Cube_Simple_v2.STL  Pyramid_Complex.STL  Pyramid_Simple.stl
ur_printer_control/: CMakeLists.txt  README.md  package.xml
ur_printer_control/config/: my_robot_calibration.yaml
ur_printer_control/config/ur5e/: physical_parameters.yaml
ur_printer_control/launch/: rsp.launch.py  start_robot.launch.py
ur_printer_control/urdf/: ur_printer_controlled.urdf.xacro
ur_printer_description/: CMakeLists.txt  README.md  package.xml
ur_printer_description/launch/: view_robot.launch.py
ur_printer_description/meshes/: EndEffector.stl  EndEffectorTest2.stl  Test3.stl
ur_printer_description/rviz/: urdf.rviz
ur_printer_description/urdf/: custom_nozzle.xacro  test.urdf  ur_printer.urdf.xacro
ur_printer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_printer_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ur5e_printer.ros2_control.xacro  ur5e_printer.srdf  ur5e_printer.urdf.xacro
ur_printer_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_slicer_interfaces/: CMakeLists.txt  README.md  package.xml
ur_slicer_interfaces/action/: PreparePrinter.action  Slicer.action
ur_slicer_interfaces/msg/: BedCorners.msg  NozzleTemperature.msg  SlicerSettings.msg
ur_slicer_interfaces/srv/: ExtruderControl.srv  HeaterControl.srv
ur_slicer_io_control/: package.xml  setup.cfg  setup.py
ur_slicer_io_control/launch/: fake_io.launch.py  real_io.launch.py
ur_slicer_io_control/ur_slicer_io_control/: io_control_node.py
