<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slicer_panel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johnlyleiv@gmail.com">john</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>static_tf_broadcaster</depend>
  <depend>interactive_markers</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>Qt5</depend>
  <depend>ur_slicer_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
